# xAndria

./: .gitignore  Anchor.toml  Cargo.toml  Changes_Required_For_Use.txt  README.md  package.json  tsconfig.json
programs/forum/: Cargo.toml
programs/forum/src/: lib.rs
programs/forum/src/instructions/: accept_answer.rs  accept_big_note_verification_application.rs  accept_proposed_contribution.rs  add_content_to_answer.rs  add_content_to_big_note.rs  add_content_to_question.rs  add_moderator.rs  answer_question.rs  apply_for_big_note_verification.rs  ask_question.rs  close_account.rs  close_forum.rs  create_about_me.rs  create_big_note.rs  create_challenge.rs  create_submission.rs  create_user_profile.rs  delete_about_me.rs  delete_answer.rs  delete_answer_moderator.rs  delete_big_note.rs  delete_big_note_moderator.rs  delete_big_note_verification_application.rs  delete_big_note_verification_application_moderator.rs  delete_challenge.rs  delete_comment.rs  delete_comment_on_answer.rs  delete_comment_on_answer_moderator.rs  delete_comment_on_big_note.rs  delete_comment_on_big_note_moderator.rs  delete_comment_on_proposed_contribution.rs  delete_comment_on_proposed_contribution_moderator.rs  delete_comment_on_question.rs  delete_comment_on_question_moderator.rs  delete_proposed_contribution.rs  delete_proposed_contribution_moderator.rs  delete_question.rs  delete_question_moderator.rs  delete_submission.rs  delete_submission_moderator.rs  (+49 more)
programs/forum/src/state/: about_me.rs  answer.rs  big_note.rs  big_note_type.rs  big_note_verification_application.rs  challenge.rs  (+17 more)
(+29 files in other folders)
