[package]
name = "forum"
version = "0.1.0"
description = "forum program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "forum"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version="0.26.0", features = ["init-if-needed"] }
anchor-spl = "0.26.0"
static_assertions = "1.1.0"
thiserror = "1.0.48"
prog_common = {path='../../lib/prog_common'}
proc_macros = {path='../../lib/proc_macros'}

